--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"axios": "^1.12.2",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-router-dom": "^7.9.3",
 		"react-slick": "^0.31.0",
 		"slick-carousel": "^1.8.1",
 		"swiper": "^12.0.2",
