--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.1",
-		"@mui/icons-material": "^7.3.2",
-		"@mui/material": "^7.3.2",
+		"@mui/icons-material": "^7.3.4",
+		"@mui/material": "^7.3.4",
 		"@tailwindcss/vite": "^4.1.13",
 		"axios": "^1.12.2",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"feather-icons-react": "^0.9.0",
+		"lucide-react": "^0.546.0",
+		"quill": "^2.0.3",
+		"react": "^18.2.0",
+		"react-bootstrap": "^2.10.10",
+		"react-dom": "^18.2.0",
+		"react-quill": "^2.0.0",
 		"react-router-dom": "^7.9.3",
 		"react-slick": "^0.31.0",
 		"slick-carousel": "^1.8.1",
