--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"lucide-react": "^0.546.0",
 		"quill": "^2.0.3",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.10.10",
 		"react-dom": "^18.2.0",
 		"react-quill": "^2.0.0",
 		"react-router-dom": "^7.9.3",
@@ -43,6 +42,7 @@
 		"globals": "^16.4.0",
 		"postcss": "^8.5.6",
 		"prettier": "^3.6.2",
+		"sass-embedded": "^1.93.2",
 		"tailwindcss": "^4.1.13",
 		"vite": "^7.1.7"
 	}
