--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
+  "headers": [
+    {
+      "source": "/(.*)\\.(?:png|jpg|jpeg|gif|svg|webp|avif|ico)$",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/(.*)\\.(?:css|js)$",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    }
+  ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
