--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 		"@tailwindcss/vite": "^4.1.13",
 		"axios": "^1.12.2",
 		"feather-icons-react": "^0.9.0",
+		"highlight.js": "^11.11.1",
 		"lucide-react": "^0.546.0",
-		"quill": "^2.0.3",
+		"quill": "^1.3.7",
+		"quill-image-resize-module": "^3.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-quill": "^2.0.0",
