--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"feather-icons-react": "^0.9.0",
 		"highlight.js": "^11.11.1",
 		"lucide-react": "^0.546.0",
+		"prop-types": "^15.8.1",
 		"quill": "^1.3.7",
 		"quill-image-resize-module": "^3.0.0",
 		"react": "^18.2.0",
