--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"axios": "^1.12.2",
 		"feather-icons-react": "^0.9.0",
 		"highlight.js": "^11.11.1",
+		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.546.0",
 		"prop-types": "^15.8.1",
 		"quill": "^1.3.7",
