--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,19 @@
 {
-  "headers": [
-    {
-      "source": "/(.*)\\.(?:png|jpg|jpeg|gif|svg|webp|avif|ico)$",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/(.*)\\.(?:css|js)$",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+	"$schema": "https://openapi.vercel.sh/vercel.json",
+	"headers": [
+		{
+			"source": "/:all*.(png|jpg|jpeg|gif|svg|webp|avif|ico)",
+			"headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+		},
+		{
+			"source": "/:all*.(css|js)",
+			"headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }]
+		}
+	],
+	"rewrites": [
+		{
+			"source": "/:path*",
+			"destination": "/index.html"
+		}
+	]
 }
