Update config & app logo

--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 VITE_APP_BASE_NAME = /pancharm
 
-VITE_APP_URL = http://52.197.176.149:8080/pancharm
+VITE_APP_URL = http://api.staging.pancharm.vn/pancharm
