--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 VITE_APP_BASE_NAME = /pancharm
 
-VITE_APP_URL = https://api.staging.pancharm.vn/pancharm
+VITE_APP_URL = http://localhost:8080/pancharm
