--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,6 @@ GENERATE_SOURCEMAP = false
 VITE_APP_BASE_NAME = /pancharm
 
 VITE_APP_URL = http://localhost:8080/pancharm
+
+VITE_PAGE_ID = 114588658324424
+VITE_MESSENGER_URL = https://m.me/
