--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,5 @@ GENERATE_SOURCEMAP = false
 VITE_APP_BASE_NAME = /pancharm
 
 VITE_APP_URL = https://api.pancharm.vn/pancharm
+
+VITE_PAGE_ID = 114588658324424
