--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@mui/material": "^7.3.4",
 		"@tailwindcss/vite": "^4.1.13",
 		"axios": "^1.12.2",
+		"dompurify": "^3.3.0",
 		"feather-icons-react": "^0.9.0",
 		"highlight.js": "^11.11.1",
 		"jwt-decode": "^4.0.0",
