--- a/.env.preview
+++ b/.env.preview
@@ -4,7 +4,7 @@ GENERATE_SOURCEMAP = false
 ## Public URL
 VITE_APP_BASE_NAME = /pancharm
 
-VITE_APP_URL = https://api.pancharm.vn/pancharm
+VITE_APP_URL = https://api.staging.pancharm.vn/pancharm
 
 VITE_PAGE_ID = 114588658324424
 VITE_MESSENGER_URL = https://m.me/
